--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -18,6 +18,7 @@ library
     Combinatorics.UPairsTree
   build-depends:
       base ^>=4.16.3.0
+    , text
     , containers
 
   hs-source-dirs:
@@ -34,4 +35,5 @@ executable enigma
   build-depends:
       base >=4.7 && <5
     , enigma-model
+    , text
   default-language: Haskell2010
