just checked it out with hashmap instead of map

--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -21,7 +21,7 @@ library
   build-depends:
       base ^>=4.16.3.0
     , text
-    , containers
+    , unordered-containers
     , raw-strings-qq
   hs-source-dirs:
     lib
