--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -26,6 +26,9 @@ library
     , raw-strings-qq
   hs-source-dirs:
     lib
+  ghc-options:
+    -Wall
+    -O2
   default-language: Haskell2010
 
 executable enigma
@@ -37,6 +40,9 @@ executable enigma
       base >=4.7 && <5
     , enigma-model
     , text
+  ghc-options:
+    -Wall
+    -O2
   default-language: Haskell2010
 
 test-suite tests
@@ -47,6 +53,9 @@ test-suite tests
   default-language:
     Haskell2010
   main-is: Main.hs
+  ghc-options:
+    -Wall
+    -O2
   build-depends:
       base >=4.7 && <5
     , QuickCheck
