--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -19,9 +19,8 @@ library
     Options.Parse
     Options.Interpret
   build-depends:
-      base ^>=4.16.3.0
+      base
     , text
-    , unordered-containers
     , array
     , raw-strings-qq
   hs-source-dirs:
@@ -37,7 +36,7 @@ executable enigma
   hs-source-dirs:
     app
   build-depends:
-      base >=4.7 && <5
+      base
     , enigma-model
     , text
   ghc-options:
@@ -57,7 +56,7 @@ test-suite tests
     -Wall
     -O2
   build-depends:
-      base >=4.7 && <5
+      base
     , QuickCheck
     , enigma-model
     , text
