--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -17,7 +17,7 @@ library
     Combinatorics.PermutationTree
     Combinatorics.UPairsTree
     Options.Parse
-    Options.Interpret
+    --Options.Interpret
   build-depends:
       base
     , array
@@ -25,6 +25,7 @@ library
     , bytestring
     , text
     , mtl
+    , optparse-applicative
   hs-source-dirs:
     lib
   ghc-options:
@@ -32,19 +33,19 @@ library
     -O2
   default-language: Haskell2010
 
-executable enigma
-  main-is:
-    Main.hs
-  hs-source-dirs:
-    app
-  build-depends:
-      base
-    , enigma-model
-    , bytestring
-  ghc-options:
-    -Wall
-    -O2
-  default-language: Haskell2010
+--executable enigma
+--  main-is:
+--    Main.hs
+--  hs-source-dirs:
+--    app
+--  build-depends:
+--      base
+--    , enigma-model
+--    , bytestring
+--  ghc-options:
+--    -Wall
+--    -O2
+--  default-language: Haskell2010
 
 test-suite tests
   type:
