--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -17,7 +17,8 @@ library
     Combinatorics.PermutationTree
     Combinatorics.UPairsTree
     Options.Parse
-    --Options.Interpret
+    Options.Interpret
+    Options.Interact
   build-depends:
       base
     , array
@@ -33,19 +34,19 @@ library
     -O2
   default-language: Haskell2010
 
---executable enigma
---  main-is:
---    Main.hs
---  hs-source-dirs:
---    app
---  build-depends:
---      base
---    , enigma-model
---    , bytestring
---  ghc-options:
---    -Wall
---    -O2
---  default-language: Haskell2010
+executable enigma
+  main-is:
+    Main.hs
+  hs-source-dirs:
+    app
+  build-depends:
+      base
+    , enigma-model
+    , bytestring
+  ghc-options:
+    -Wall
+    -O2
+  default-language: Haskell2010
 
 test-suite tests
   type:
