proto functionality to read config files

--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -19,6 +19,7 @@ library
     Options.Parse
     Options.Interpret
     Options.Interact
+    Options.ConfigFile
   build-depends:
       base
     , array
