added parser for enigma config file

--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -28,6 +28,8 @@ library
     , text
     , mtl
     , optparse-applicative
+    , megaparsec
+    , parser-combinators
   hs-source-dirs:
     lib
   ghc-options:
