cli option to generate arbitrary config file

--- a/enigma-model.cabal
+++ b/enigma-model.cabal
@@ -29,6 +29,7 @@ library
     , optparse-applicative
     , megaparsec
     , parser-combinators
+    , random
   hs-source-dirs:
     lib
   ghc-options:
